test/fail/fail_12.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: fail_12.prsl:5:1: error: at 'return': Can't return from top-level code

return 5;